Tweaked project layout to make it simpler to digest, forked from evan-carey

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>Angular TypeScript Webpack</title>
+    <title>Demo Reddit App - AngularJS</title>
     <meta default http-equiv="X-UA-Compatible" content="IE=edge">
     <meta default name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <div ui-view>
+    <app>
         <span>Loading...</span>
-    </div >
+    </app>
 </body>
 
 </html>
